# ┌───────────────────────────────────────────────────────────────┐
# │ Contents of pyproject.toml                                    │
# ├───────────────────────────────────────────────────────────────┘
# │
# ├── BUILD SYSTEM
# ├── PROJECT
# ├── TOOLS
# │
# └───────────────────────────────────────────────────────────────

# ################################################################ BUILD SYSTEM

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# ################################################################ PROJECT

[project]
name = "tableofcontents"
version = "2.0.1"
authors = [
  { name="AlphaJack" },
]
description = "Generate a table of contents from the comments of a file"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]
dependencies = []

[project.scripts]
toc = "toc.cli:main"

[project.urls]
Homepage = "https://github.com/AlphaJack/toc"
Issues = "https://github.com/AlphaJack/toc/issues"
Repository = "https://github.com/AlphaJack/toc"
Changelog = "https://github.com/AlphaJack/toc"

# ################################################################ TOOLS

[tool.setuptools_scm]

[remote.github]
owner = "AlphaJack"
repo = "tocf"

[tool.git-cliff.git]
conventional_commits = false
commit_parsers = []
filter_unconventional = false
protect_breaking_commits = true
filter_commits = false
split_commits = true
tag_pattern = "v[0-9].*"
skip_tags = "beta|alpha|v2.0.0|v1.0.0"
ignore_tags = "rc"
sort_commits = "newest"

[tool.git-cliff.changelog]
trim = true
footer = ""
body = """
{% if version %}\
    ## toc {{ version | trim_start_matches(pat="v") }} - {{ timestamp | date(format="%Y-%m-%d") }}\
{% else %}\
    ## latest commits\
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | upper_first }}
    {% for commit in commits %}\
        - {% if commit.breaking %}[**breaking**] {% endif %}{{ commit.message | upper_first }}
    {% endfor %}\
{% endfor %}\n

## toc 2.0.0 - 2024-01-21

- Rewritten in pure python
- Published to PyPI as [`tableofcontents`](https://pypi.org/project/tableofcontents)
- Added feature to prepend the table of contents to files, preserving shebangs

## toc 1.0.0 - 2023-11-03

- Initial release in Bash

"""
